commiting the new features adding events editing and viewing while also updating the dashboard

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -45,6 +45,12 @@
 					<span class="text">Members</span>
 				</a>
 			</li>
+			<li>
+				<a href="events.html">
+					<i class='bx bxs-group' ></i>
+					<span class="text">Events</span>
+				</a>
+			</li>
 		</ul>
 		<ul class="side-menu">
 			<li>
