--- a/html/member.html
+++ b/html/member.html
@@ -30,6 +30,7 @@
                             <div class="card-body">
                                 <p class="mb-0"><strong class="pr-1">Member's ID: </strong>202000456</p>
                                 <p class="mb-0"><strong class="pr-1">Club:</strong>Beirut</p>
+                                <p class="mb-0"><strong class="pr-1">Joining Date:</strong>May 10, 2024</p>
                             </div>
                         </div>
                     </div>
@@ -56,7 +57,15 @@
                                     </tr>
                                     <tr>
                                         <th width="30%">Birthday :</th>
-                                        <td width="50%">24/4/2000</td>
+                                        <td width="50%"><input type="date" value="2000-04-24"></td>
+                                    </tr>
+                                    <tr>
+                                        <th width="30%">Emergency Contact :</th>
+                                        <td width="50%">00000000</td>
+                                    </tr>
+                                    <tr>
+                                        <th width="30%">Blood Type :</th>
+                                        <td width="50%">A+</td>
                                     </tr>
                                 </table>
 											
