--- a/html/member.html
+++ b/html/member.html
@@ -97,7 +97,7 @@
                                 </ul>
                                 <!-- Participation percentage -->
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60% Participation</div>
+                                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60% Participation</div>
                                 </div>
                             </div>
                         </div>
@@ -107,5 +107,12 @@
             </div>
         </div>
     </section>
+    <script>
+        window.onload = function() {
+            var progressBar = document.querySelector('.progress-bar');
+            progressBar.style.width = '60%'; 
+            progressBar.setAttribute('aria-valuenow', '60');
+        };
+    </script>
 </body>
 </html>
