--- a/html/analytics.html
+++ b/html/analytics.html
@@ -34,15 +34,15 @@
 				</a>
 			</li>
 			<li>
-				<a href="messages.html">
-					<i class='bx bxs-message-dots' ></i>
-					<span class="text">Messages</span>
-				</a>
-			</li>
-			<li>
 				<a href="members.html">
 					<i class='bx bxs-group' ></i>
 					<span class="text">Members</span>
+				</a>
+			</li>
+			<li>
+				<a href="events.html">
+					<i class='bx bxs-group' ></i>
+					<span class="text">Events</span>
 				</a>
 			</li>
 		</ul>
