--- a/html/members.html
+++ b/html/members.html
@@ -33,18 +33,18 @@
                     <span class="text">Analytics</span>
                 </a>
             </li>
-            <li>
-                <a href="messages.html">
-                    <i class='bx bxs-message-dots' ></i>
-                    <span class="text">Messages</span>
-                </a>
-            </li>
             <li class="active">
                 <a href="#">
                     <i class='bx bxs-group' ></i>
                     <span class="text">Members</span>
                 </a>
             </li>
+			<li>
+				<a href="events.html">
+					<i class='bx bxs-group' ></i>
+					<span class="text">Events</span>
+				</a>
+			</li>
         </ul>
         <ul class="side-menu">
             <li>
