--- a/html/members.html
+++ b/html/members.html
@@ -118,10 +118,10 @@
 					<form id="addMemberForm">
 						<label for="memberName">Member Name:</label>
 						<input type="text" id="memberName" name="memberName" required>
-						<label for="address">Address:</label>
-						<input type="text" id="address" name="address">
 						<label for="idNumber">ID Number:</label>
 						<input type="text" id="idNumber" name="idNumber">
+						<label for="password">Password:</label>
+						<input type="password" id="password" name="password">
 						<label for="club">Club:</label>
 						<select id="club" name="club">
 							<option value="LAU">LAU</option>
@@ -129,16 +129,6 @@
 							<option value="BAU">BAU</option>
 							<option value="Beirut">Beirut</option>
 						</select>
-						<label for="phoneNumber">Phone Number:</label>
-						<input type="tel" id="phoneNumber" name="phoneNumber">
-						<label for="email">Email:</label>
-						<input type="email" id="email" name="email">
-						<label for="birthday">Birthday:</label>
-						<input type="date" id="birthday" name="birthday">
-						<label for="bloodType">Blood Type:</label>
-						<input type="text" id="bloodType" name="bloodType">
-						<label for="emergencyContact">Emergency Contact:</label>
-						<input type="text" id="emergencyContact" name="emergencyContact">
 						<button type="submit" class="add-member-btn">Add Member</button>
 					</form>
 				</div>
