--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -41,7 +41,7 @@
 			</li>
 			<li>
 				<a href="events.html">
-					<i class='bx bxs-group' ></i>
+					<i class='bx bxs-calendar' ></i>
 					<span class="text">Events</span>
 				</a>
 			</li>
