--- a/html/events.html
+++ b/html/events.html
@@ -209,12 +209,6 @@
           </a>
         </li>
         <li>
-          <a href="messages.html">
-            <i class="bx bxs-message-dots"></i>
-            <span class="text">Messages</span>
-          </a>
-        </li>
-        <li>
           <a href="members.html">
             <i class="bx bxs-group"></i>
             <span class="text">Members</span>
@@ -222,7 +216,7 @@
         </li>
         <li class="active">
           <a href="events.html">
-            <i class="bx bxs-group"></i>
+            <i class="bx bxs-calendar"></i>
             <span class="text">Events</span>
           </a>
         </li>
