--- a/html/members.html
+++ b/html/members.html
@@ -116,12 +116,14 @@
 					<span class="close">&times;</span>
 					<h2>Add New Member</h2>
 					<form id="addMemberForm">
-						<label for="memberName">Member Name:</label>
+						<label for="memberName">Member Username:</label>
 						<input type="text" id="memberName" name="memberName" required>
 						<label for="idNumber">ID Number:</label>
 						<input type="text" id="idNumber" name="idNumber">
 						<label for="password">Password:</label>
 						<input type="password" id="password" name="password">
+						<label for="joiningdate">Joining Date:</label>
+            			<input type="date" id="joiningdate" name="joiningdate">
 						<label for="club">Club:</label>
 						<select id="club" name="club">
 							<option value="LAU">LAU</option>
@@ -147,7 +149,7 @@
 					<table>
 						<thead>
 							<tr>
-								<th>Member Name</th>
+								<th>Username</th>
 								<th>Address</th>
 								<th>ID Number</th>
 								<th>Club</th>
